--- a/jfinalmaven/jfinalweb/pom.xml
+++ b/jfinalmaven/jfinalweb/pom.xml
@@ -26,6 +26,18 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.2</version>
         </dependency>
+        <!--maven driver &$ plugins-->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cybermkd</groupId>
+            <artifactId>MongodbPlugin</artifactId>
+            <version>1.0.8.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>jfinalweb</finalName>
